# outrun-like-game

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  install-sdl.sh
src/: ResPath.h  main.cpp
src/factory/: Entities.h  SceneBuilder.h  SceneConstants.h  TrackBuilder.h
src/view/: Line.h  MainWindow.h  Scene.h  Sound.h  Sprite.h  Text.h  Tileset.h
